# demote

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STATE.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: adding-a-driver.md
packaging/: demote.sh  gen-python-deps.py  io.github.yotapower04.Demote.desktop  io.github.yotapower04.Demote.metainfo.xml  io.github.yotapower04.Demote.yml  python3-deps.yaml
tests/: conftest.py  test_drivers.py  test_ui.py
tvremote/: cast.py  config.py  controller.py  discovery.py  gamepad.py  icons.py  logical.py  ui.py  volumekeys.py
tvremote/drivers/: __init__.py  androidtv.py  base.py  dlna.py  lg.py  net.py  philips.py  roku.py  samsung.py  vizio.py
